--- a/views/hobby.ejs
+++ b/views/hobby.ejs
@@ -4,21 +4,23 @@
 
 <div class="container mt-5 pt-4">
 
-<div class="card-deck ">
-  <div class="card bg-light mb-3">
+<div class="card-deck" >
+  <div class="card bg-light mb-3" id="portfolio">
     <img class="card-img-top" src="/18.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Nauka programowania</h5>
-      <p class="card-text">Jestem w trakcie intensywnej nauki programowania aplikacji webowych. Tą prostą stronę wykonałem korzystając z HTML5, CSS3, JS, NODE.JS (express, ejs, body-parser i nodemailer) oraz Bootstrap. Potrafię również pisać podstawowe aplikacje JAVA.FX. 
+      <p class="card-text">Jestem w trakcie intensywnej nauki programowania aplikacji webowych. Tą prostą stronę wykonałem korzystając z HTML5, CSS3, JS, NODE.JS (express, ejs, body-parser i nodemailer) oraz Bootstrap. Sam skonfugirowałem serwer i wykupiłem domenę. Potrafię również pisać podstawowe aplikacje JAVA.FX. 
       Obecnie przyswajam wiedzę z zakresu baz danych (MongoDB). </p>
            </div>
-     
+       <div class="card-footer">
+      <a class="btn btn-primary btn-sm" href="https://github.com/Numbian/portfolio" target="_blank" role="button">Zobacz projekt na GIT</a>
   </div>
+</div>
 </div>
 
 
 <div class="card-deck">
-  <div class="card bg-light">
+  <div class="card bg-light" id="yt">
     <img class="card-img-top" src="/15.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Youtube</h5>
@@ -28,7 +30,7 @@
       <a class="btn btn-primary btn-sm" href="https://www.youtube.com/channel/UCI4PjvSFvx-tg21FfQI3jDA" target="_blank" role="button">Zobacz więcej</a>
     </div>
   </div>
-  <div class="card bg-light">
+  <div class="card bg-light" id="gry">
     <img class="card-img-top" src="/16.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Unity</h5>
@@ -38,7 +40,7 @@
       <a class="btn btn-primary btn-sm" href="https://play.google.com/store/apps/developer?id=NumbianDev" target="_blank" role="button">Zobacz więcej</a>
     </div>
   </div>
-  <div class="card bg-light">
+  <div class="card bg-light" id="makro">
     <img class="card-img-top" src="/17.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Makrofotografia</h5>
