--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,28 +1,11 @@
 <% include header %>
 
 
-
 <div class="container mt-5 mb-5 pt-4">
 
 <div class="card-deck">
-
- <div class="card bg-light"> 
-    <img class="card-img-top" src="/22.jpg" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Filmy techniczne</h5>
-      <p class="card-text">Wideo w stylu "Jak to jest zrobione", prezentujące proces produkcji systemów wentylacyjnych. </p>
-      </div>
-      <div class="card-footer">
-           <a class="btn btn-primary btn-sm" href="https://www.youtube.com/watch?v=3EJOERIKeLc" target="_blank" role="button">Zobacz więcej</a>
-      </div>
-    </div>
-  </div>
-  
-
-
-
-<div class="card-deck">
-<div class="card bg-light"> 
+    
+<div class="card bg-light" id="Promocja Rainline 2018.pdf"> 
     <img class="card-img-top" src="/5.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Akcje promocyjne</h5>
@@ -33,7 +16,7 @@
     </div>
   </div>
 
-  <div class="card bg-light"> 
+  <div class="card bg-light" id="Ulotka_Lindab_Protect.pdf"> 
     <img class="card-img-top" src="/9.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Ulotki informacyjne</h5>
@@ -44,7 +27,7 @@
     </div>
   </div>
 
- <div class="card bg-light"> 
+ <div class="card bg-light" id="Siłowniki.pdf"> 
     <img class="card-img-top" src="/6.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Promocja cenowa</h5>
@@ -58,7 +41,21 @@
 </div>
 
 <div class="card-deck">
-  <div class="card bg-light"> 
+
+ <div class="card bg-light" id="techniczne"> 
+    <img class="card-img-top" src="/22.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Filmy techniczne</h5>
+      <p class="card-text">Wideo w stylu "Jak to jest zrobione", prezentujące proces produkcji systemów wentylacyjnych. </p>
+      </div>
+      <div class="card-footer">
+           <a class="btn btn-primary btn-sm" href="https://www.youtube.com/watch?v=3EJOERIKeLc" target="_blank" role="button">Zobacz więcej</a>
+      </div>
+    </div>
+  </div>
+
+<div class="card-deck">
+  <div class="card bg-light" id="spoty"> 
       <img class="card-img-top" src="/11.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Spoty internetowe</h5>
@@ -69,7 +66,7 @@
       </div>
     </div>
 
-<div class="card bg-light"> 
+<div class="card bg-light" id=animacje> 
     <img class="card-img-top" src="/13.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Animacje</h5>
@@ -80,9 +77,7 @@
     </div>
   </div>
 
-
-
- <div class="card bg-light"> 
+ <div class="card bg-light" id="instrukcje"> 
     <img class="card-img-top" src="/12.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Wideo-instrukcje</h5>
@@ -97,9 +92,7 @@
 
 
 <div class="card-deck">
-
-
-    <div class="card bg-light">
+    <div class="card bg-light" id="player">
     <img class="card-img-top" src="/20.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Targi branżowe</h5>
@@ -114,7 +107,7 @@
 
 <div class="card-deck">
    
-<div class="card bg-light"> 
+<div class="card bg-light" id="VA.jpg"> 
     <img class="card-img-top" src="/10.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Ulotki informacyjne</h5>
@@ -125,7 +118,7 @@
     </div>
   </div>
 
-   <div class="card bg-light">
+   <div class="card bg-light" id="UltraLink_210x297+5mm.jpg">
     <img class="card-img-top" src="/4.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Reklamy prasowe i ulotki</h5>
@@ -136,7 +129,7 @@
     </div>
 </div>
 
- <div class="card bg-light"> 
+ <div class="card bg-light" id="Dachowa_i_rynnowa.pdf"> 
     <img class="card-img-top" src="/1.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Wsparcie sprzedaży</h5>
@@ -146,12 +139,10 @@
        <a class="btn btn-primary btn-sm" href="/Dachowa_i_rynnowa.pdf" target="_blank" role="button">Zobacz więcej</a>
     </div>
   </div>
-
-
   </div>
  
-<div class="card-deck">
- <div class="card bg-light"> 
+<div class="card-deck" >
+ <div class="card bg-light" id="Lindab_Rainline.pdf"> 
     <img class="card-img-top" src="/19.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Broszury</h5>
@@ -166,7 +157,7 @@
 
   <div class="card-deck">
    
-<div class="card bg-light"> 
+<div class="card bg-light" id="7.jpg"> 
     <img class="card-img-top" src="/7.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Tablice informacyjne</h5>
@@ -177,7 +168,7 @@
     </div>
   </div>
 
-<div class="card bg-light"> 
+<div class="card bg-light" id=8.jpg> 
     <img class="card-img-top" src="/8.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Wizualizacje 3d</h5>
