--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,7 @@
     <img class="card-img-top" src="/6.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Promocja cenowa</h5>
-      <p class="card-text">Akcja polegająca na przydzieleniu dodatkowyego rabatu przy zakupie za podaną kwotę.</p>
+      <p class="card-text">Akcja polegająca na przydzieleniu dodatkowego rabatu przy zakupie za podaną kwotę.</p>
        </div>
         <div class="card-footer">
        <a class="btn btn-primary btn-sm" href="/siłowniki.pdf" target="_blank" role="button">Zobacz więcej</a>
