--- a/views/kontakt.ejs
+++ b/views/kontakt.ejs
@@ -1,6 +1,6 @@
 <% include header %>
 
-<div class="container mt-5 mb-5 pt-4">
+<div class="container mt-5 mb-5 pt-4 kontaktform">
 <h4>Proszę zostawić dane kontaktowe w formularzu.</h4>
 
 <form action="/sendform" method="POST">
