--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,10 @@
 body, html {
     height: 100%;
     font-family: 'Source Sans Pro', sans-serif, arial;
-  
+}
+
+.kontaktform{
+max-width: 500px;
 }
 
 .margines{
